# Frostfire-Forge

./: .env.development  .gitattributes  .gitignore  .gitmodules  BACKEND_DEPLOYMENT_SUCCESS.md  CLOUDFLARE_FRONTEND_SETUP.md  CLOUDFLARE_SETUP_COMPLETE.md  HYBRID_DEPLOYMENT_GUIDE.md  MIGRATION_SUMMARY.md  README-SPACETIMEDB.md  README.md  VPS_DEPLOYMENT_GUIDE.md  deploy_backend_only.sh  deploy_step_by_step.sh  deploy_to_vps.sh  docker-compose.yml  init_spacetime_bridge.ts  package.json  production.env.template  test_game_server.ts  test_spacetime_bridge.ts  test_spacetime_integration.ts  tsconfig.json  types.d.ts
.github/: FUNDING.yml
.github/workflows/: build_release.yml  codeql.yml
.husky/: pre-commit
assets/scripts/: websocket.ts
cloudflare-frontend/: DEPLOYMENT_GUIDE.md  README.md  package.json  quick-deploy.sh  wrangler.toml
cloudflare-frontend/public/: benchmark.html  change-password.html  config.js  docs.html  editor.html  forgot-password.html  game.html  index.html
cloudflare-frontend/src/: index.js
frostfire-game/: ._target  Cargo.toml
frostfire-game/src/: lib.rs
spacetime-client/: package-lock.json  package.json  test_cli_client.ts  test_client.ts  test_simple_client.ts
spacetime-client/src/: cli_client.ts  index.ts  simple_client.ts
spacetimedb-module/: Cargo.toml
spacetimedb-module/src/: lib.rs
src/controllers/: sqldatabase.ts
src/modules/: assetloader.ts  cipher.ts  hash.ts  logger.ts  sprites.ts
src/routes/: login.ts
src/services/: assetCache.ts  email.ts  ip.ts  verification.ts
src/socket/: packet_manager.ts  receiver.ts  (+2 more)
(+70 files in other folders)
