[package]
name = "frostfire-forge-module"
version = "0.1.0"
edition = "2021"

[dependencies]
spacetimedb = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "frostfire_forge_module"
crate-type = ["cdylib"] 